prod/voucher-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voucher-management-app
  namespace: voucher-management-app
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: voucher-management-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: voucher-management-app
    spec:
      containers:
        - name: voucher-management-app
          image: public.ecr.aws/s6y5a7e8/voucher-app:v10
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
          resources:
           requests:
             cpu: "200m"
             memory: "256Mi"
           limits:
             cpu: "500m"
             memory: "512Mi"
