prod/voucher-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: voucher-management-app
  name: springboot-k8s-service
spec:
  selector:
    app: voucher-management-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8081
  type: NodePort
  selector:
    app.kubernetes.io/name: voucher-management-app
