prod/voucher-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: voucher-management-app
  name: ingress-voucher
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTP":8080},{"HTTP":3000}]'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: springboot-k8s-service
              port:
                number: 8080
        - path: /
          pathType: Prefix
          backend:
            service:
              name: reactjs-k8s-service
              port:
                number: 3000
        - path: /api/auth
          pathType: Prefix
          backend:
            service:
              name: reactjs-k8s-service
              port:
                number: 3000
